# space_traders

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: agent.rs  agents_and_factions.rs  common.rs  contracts.rs  fleet.rs  lib.rs  register.rs  system.rs
ui/: Cargo.toml  index.html  input.css  tailwind.config.js
ui/src/: app.rs  fleet.rs  home.rs  js_bind.rs  main.rs  my_agent.rs  nav.rs  system.rs
